# Lamatic-Python-SDK

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
lamatic/: __init__.py  client.py  types.py
tests/: test_client.py
