[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamatic-python"
version = "0.1.0"
description = "Python SDK for the Lamatic API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lamatic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
